extra page + additional changes

--- a/index.html
+++ b/index.html
@@ -106,8 +106,8 @@
                         <img class="portfolio-card-img" src="assets/imgs/projectweek.jpg" class="img-responsive rounded" alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, meyawo Landing page">
                         <span class="portfolio-card-overlay">
                             <span class="portfolio-card-caption">
-                                <h4>Web Designing</h5>
-                                <p class="font-weight-normal">Category: Web Templates</p>
+                                <h4>Projectweek</h5>
+                                <p class="font-weight-normal">Werken aan Smart-Koffiemachine.</p>
                             </span>                         
                         </span>                         
                     </a>
@@ -117,8 +117,8 @@
                         <img class="portfolio-card-img" src="assets/imgs/Top-level-diagram.png" class="img-responsive rounded" alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, meyawo Landing page">    
                         <span class="portfolio-card-overlay">
                             <span class="portfolio-card-caption">
-                                <h4>Web Designing</h5>
-                                <p class="font-weight-normal">Category: Web Templates</p>
+                                <h4>Project-hosting</h5>
+                                <p class="font-weight-normal">Een hostplatform voorzien voor php-applicaties.</p>
                             </span>                         
                         </span>                     
                     </a>
