--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             <!-- row -->
             <div class="row">
                 <div class="col-md-12 mb-4">
-                    <a href="https://mijnithulp.be/" class="portfolio-card">
+                    <a href="https://mijnithulp.be/" target="_blank" class="portfolio-card">
                         <img src="assets/imgs/bannermih.jpg" class="portfolio-card-img" alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, meyawo Landing page">    
                         <span class="portfolio-card-overlay">
                             <span class="portfolio-card-caption">
@@ -131,8 +131,8 @@
     <div class="container">
         <footer class="footer">       
             <div class="social-links text-right m-auto ml-sm-auto">
-                <a href="https://www.linkedin.com/in/matthias-theys-454458200/" class="link"><i class="ti-linkedin"></i></a>
-                <a href="https://twitter.com/matthias_theys" class="link"><i class="ti-twitter-alt"></i></a>
+                <a href="https://www.linkedin.com/in/matthias-theys-454458200/" class="link" target="_blank"><i class="ti-linkedin"></i></a>
+                <a href="https://twitter.com/matthias_theys" class="link" target="_blank"><i class="ti-twitter-alt"></i></a>
 
             </div>
         </footer>
