--- a/index.html
+++ b/index.html
@@ -22,10 +22,13 @@
                     <a class="link" href="#home">Home</a>
                 </li>
                 <li class="item">
-                    <a class="link" href="#about">About</a>
+                    <a class="link" href="#about">Over mij</a>
                 </li>
                 <li class="item">
-                    <a class="link" href="#portfolio">Portfolio</a>
+                    <a class="link" href="#stage">Stage</a>
+                </li>    
+                <li class="item">
+                    <a class="link" href="#portfolio">Projecten</a>
                 </li>
             </ul>
             <a href="javascript:void(0)" id="nav-toggle" class="hamburger hamburger--elastic">
@@ -61,7 +64,7 @@
                     <p class="section-subtitle">Wie ben ik?</p>
                     <h2 class="section-title mb-3">Over mij</h2>
                     <p>
-                        Ik ben een 20 jarige student met een intresse voor Cloud en Cybersecurity. Ook ben ik iemand dat ondernemend is ingesteld. Buiten dit ben ik ook een sportieve persoon die graag met vrienden en familie samenkomt. <br><br>
+                        Ik ben een 21 jarige student met een intresse voor Cloud en Cybersecurity. Ook ben ik iemand dat ondernemend is ingesteld. Buiten dit ben ik ook een sportieve persoon die graag met vrienden en familie samenkomt. <br><br>
                         <br>           
                     </p>
                     <form method="get" action="assets/imgs/cv_matthiastheys_r0895598.pdf"> 
@@ -72,11 +75,34 @@
         </div><!-- end of container -->
     </section> <!-- end of about section -->
 
+    <section class="section" id="stage">
+        <div class="container text-center">
+            <p class="section-subtitle">Mijn stage</p>
+            <h6 class="section-title mb-6">Arxus</h6>
+            <div class="row">
+                <div class="col-md-12 mb-4">
+                    <a href="stage.html" class="portfolio-card">
+                        <img src="assets/imgs/ARXUS_rebrand_logo_RGB-colored dark.svg" class="portfolio-card-img">    
+                        <span class="portfolio-card-overlay">
+                            <span class="portfolio-card-caption">
+                                <h4>Mijn stageopdracht</h5>
+                                <p class="font-weight-normal">Wanneer je hier op klikt zal je herleid worden naar de pagina waarin de uitleg omtrent mijn stage beschreven staat.</p>
+                            </span>                         
+                        </span>                     
+                    </a>
+                </div>
+            </div>
+        </div>
+
+
+
+    </section>
+
     <!-- portfolio section -->
     <section class="section" id="portfolio">
         <div class="container text-center">
-            <p class="section-subtitle">What I Did ?</p>
-            <h6 class="section-title mb-6">Portfolio</h6>
+            <p class="section-subtitle">Wat heb ik gedaan?</p>
+            <h6 class="section-title mb-6">Projecten</h6>
             <!-- row -->
             <div class="row">
                 <div class="col-md-12 mb-4">
@@ -117,8 +143,8 @@
                         <img class="portfolio-card-img" src="assets/imgs/Top-level-diagram.png" class="img-responsive rounded" alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, meyawo Landing page">    
                         <span class="portfolio-card-overlay">
                             <span class="portfolio-card-caption">
-                                <h4>Project-hosting</h5>
-                                <p class="font-weight-normal">Een hostplatform voorzien voor php-applicaties.</p>
+                                <h4>Project4.0</h5>
+                                <p class="font-weight-normal">Een AI gebaseerde applicatie om te detecteren wanneer ouderen vallen en/of hoesten.</p>
                             </span>                         
                         </span>                     
                     </a>
