--- a/koffie.html
+++ b/koffie.html
@@ -26,7 +26,7 @@
     </div>
     <div class="col-3 mt-4">
         <p>
-            Werken in een groep kan soms uitdagend zijn, maar het kan ook erg bevredigend zijn als alles goed samenvalt. Ik heb onlangs deelgenomen aan een project waarbij we een smart-koffietoestel ontwikkelden en ik moet zeggen dat het een van de beste ervaringen was die ik ooit heb gehad als het gaat om het werken in een groep.
+            Werken in een groep kan soms uitdagend zijn, maar het kan ook erg bevredigend zijn als alles goed samenvalt. Ik heb deelgenomen aan een project waarbij we een smart-koffietoestel ontwikkelden en ik moet zeggen dat het een van de beste ervaringen was die ik ooit heb gehad als het gaat om het werken in een groep.
 
 In het begin was het best lastig om iedereen op één lijn te krijgen en ervoor te zorgen dat iedereen zijn steentje bijdroeg. Maar naarmate we meer tijd samen doorbrachten en elkaar beter leerden kennen, begonnen we als groep echt te functioneren. We hadden een duidelijke taakverdeling en iedereen wist wat van hem of haar verwacht werd.
 
