--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <!-- about wrapper -->
             <div class="about">
                 <div class="about-img-holder">
-                    <img src="assets/imgs/face.jpg" class="about-img rounded-pill border border-primary" alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, meyawo Landing page">
+                    <img src="assets/imgs/Screenshot 2024-05-08 095406.png" class="about-img rounded-pill border border-primary" alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, meyawo Landing page">
                 </div>
                 <div class="about-caption">
                     <p class="section-subtitle">Wie ben ik?</p>
@@ -139,8 +139,8 @@
                     </a>
                 </div>
                 <div class="col-md-4">
-                    <a href="projecthosting.html" class="portfolio-card">
-                        <img class="portfolio-card-img" src="assets/imgs/Top-level-diagram.png" class="img-responsive rounded" alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, meyawo Landing page">    
+                    <a href="project4.html" class="portfolio-card">
+                        <img class="portfolio-card-img" src="assets/imgs/visiage.png" class="img-responsive rounded" alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, meyawo Landing page">    
                         <span class="portfolio-card-overlay">
                             <span class="portfolio-card-caption">
                                 <h4>Project4.0</h5>
