--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                 </div>
                 <div class="col-md-4">
                     <a href="koffie.html" class="portfolio-card">
-                        <img class="portfolio-card-img" src="assets/imgs/projectweek.jpg" class="img-responsive rounded" alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, meyawo Landing page">
+                        <img class="portfolio-card-img" src="assets/imgs/koffie-image.jpg" class="img-responsive rounded" alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, meyawo Landing page">
                         <span class="portfolio-card-overlay">
                             <span class="portfolio-card-caption">
                                 <h4>Projectweek</h5>
