--- a/koffie.html
+++ b/koffie.html
@@ -16,30 +16,47 @@
     <header class="col-12">
         <!-- make a home button -->
         <div class="row">
-        <h1 class="text-center py-4 achtergrond-paars col-12">Project smart-koffietoestel</h1>
+            <h1 class="text-center py-4 achtergrond-paars col-12">Project smart-koffietoestel</h1>
         </div>
     </header>
-    <div class="col-4 offset-2">
-        <p class="portfolio-card">
-            <img class="portfolio-card-img btn-rounded kaarten mt-2" src="assets/imgs/projectweek.jpg" class="img-responsive rounded">
-        </p>
-    </div>
-    <div class="col-3 mt-4">
-        <p>
-            Werken in een groep kan soms uitdagend zijn, maar het kan ook erg bevredigend zijn als alles goed samenvalt. Ik heb deelgenomen aan een project waarbij we een smart-koffietoestel ontwikkelden en ik moet zeggen dat het een van de beste ervaringen was die ik ooit heb gehad als het gaat om het werken in een groep.
+    <div class="container">
+        <div class="row mt-3">
+            <div class="col-6">
+                    <img class="col-12 p-0 border border-primary rounded" src="assets/imgs/projectweek.jpg">
+            </div>
+            <div class="col-6">
+                <h2>Inleiding</h2>
+                <p>
+                    Werken in een groep kan soms uitdagend zijn, maar het kan ook erg bevredigend zijn als alles goed samenvalt. Ik heb deelgenomen aan een project waarbij we een smart-koffietoestel ontwikkelden en ik moet zeggen dat het een van de beste ervaringen was die ik ooit heb gehad als het gaat om het werken in een groep.
 
-In het begin was het best lastig om iedereen op één lijn te krijgen en ervoor te zorgen dat iedereen zijn steentje bijdroeg. Maar naarmate we meer tijd samen doorbrachten en elkaar beter leerden kennen, begonnen we als groep echt te functioneren. We hadden een duidelijke taakverdeling en iedereen wist wat van hem of haar verwacht werd.
+                    In het begin was het best lastig om iedereen op één lijn te krijgen en ervoor te zorgen dat iedereen zijn steentje bijdroeg. Maar naarmate we meer tijd samen doorbrachten en elkaar beter leerden kennen, begonnen we als groep echt te functioneren. We hadden een duidelijke taakverdeling en iedereen wist wat van hem of haar verwacht werd.
 
-Een van de grootste voordelen van het werken in een groep was dat we verschillende vaardigheden en sterke punten hadden. Sommigen van ons waren goed in het technische aspect van de ontwikkeling van de smart-koffietoestel, terwijl anderen beter waren in het ontwerp of de marketing. Door onze krachten te bundelen, konden we echt iets bijzonders creëren.
-
-We hadden ook veel plezier samen. 
-    </div>
-    <div class="col-7 offset-2">
-        <p>We brachten lange uren door in de bibliotheek en werkten aan de ontwikkeling van ons product, maar we maakten ook tijd vrij om samen te lunchen of te ontspannen. Dit hielp ons om elkaar beter te leren kennen en ons meer verbonden te voelen als groep.
-
-            Uiteindelijk was ons project een groot succes. Het smart-koffietoestel dat we hadden ontwikkeld was uniek en innovatief, en we waren allemaal trots op wat we hadden bereikt als groep. Het was geweldig om te zien hoe ons harde werk en onze toewijding hadden geleid tot iets dat echt indrukwekkend was.
-            
-            Over het algemeen zou ik zeggen dat mijn ervaring met het werken in een groep aan het smart-koffietoestelproject een enorm positieve ervaring was. Het was een uitdaging, maar het was ook leuk en verrijkend. Ik heb veel geleerd over het samenwerken met anderen en ik zou het zeker opnieuw doen.</p>
+                    Een van de grootste voordelen van het werken in een groep was dat we verschillende vaardigheden en sterke punten hadden. Sommigen van ons waren goed in het ontwikkelen van een werkende backend zodat alle onderdelen met elkaar konden communiceren terwijl anderen goed waren in het ontwerpen van een gebruiksvriendelijke interface. Dit zorgde ervoor dat we als groep echt konden excelleren en een product konden ontwikkelen dat zowel functioneel als aantrekkelijk was.
+                </p>
+            </div>
+        </div>
+        <div class="row mt-4">
+            <div class="text-center col-12">
+            <h2>Extra informatie</h2>
+        </div>
+            <div class="col-12">
+                <p>
+                    Er zijn verschillende onderdelen die we hebben ontwikkeld voor het smart-koffietoestel. Hieronder een overzicht van de belangrijkste onderdelen, Alsook een schematische voorstelling van de werking
+                </p>
+            </div>
+            <div class="col-6">
+                <img class="col-12" src="assets/imgs/Schema-koffie.png" alt="schema">
+            </div>
+            <div class="col-6">
+                <h3>Technische componenten</h3>
+                <ul class="list-group">
+                    <li class="list-group-item"><strong>Tablet</strong> dat gebruikt wordt als rechtstreekse touch-interface om de koffiemachine aan te sturen</li>
+                    <li class="list-group-item"><strong>Webpagina</strong> die de link legt van de onderhouder van het koffietoestel naar het toestel zelf zodat die kan zien of er nog genoeg voorraad in het toestel aanwezig is.
+                        Ook heeft dit als functie om de koffiemachine te kunnen aansturen vanop afstand.</li>
+                    <li class="list-group-item">Een <strong>API</strong> met als functie om de connector te zijn tussen de interfaces en het toestel.</li>
+                </ul>
+            </div>
+        </div>
     </div>
 </body>
 </html>
