--- a/project4.html
+++ b/project4.html
@@ -36,10 +36,37 @@
         </p>
     </div>
     <div class="row mt-4 border-top border-primary">
-        <img class="col-6 mt-3" src="assets/imgs/Picture1.png" alt="schema">
-        <p class="col-6 mt-3">Dit is een schematische voorstelling van alle onderdelen die opgezet zijn in Azure dit is gedaan met behulp van Azure Devops en</p>
+        <img class="col-12 mt-3" src="assets/imgs/Picture1.png" alt="schema">
+        <p class="col-6 mt-3">Dit is een schematische voorstelling van alle onderdelen die opgezet zijn in Azure dit is gedaan met behulp van Azure Devops en Bicep code. Hiernaast een opsomming van de voornaamste componenten.</p>
+        <ul class="col-6 list-group mt-3">
+            <li class="list-group-item">App Service</li>
+            <li class="list-group-item">SQL Database</li>
+            <li class="list-group-item">Azure Blob Storage</li>
+        </ul>
     </div>
+        <div class="row mt-4 text-center">
+
+            <h2 class="col-12">Wat heb ik hieruit geleerd?</h2>
+            <p>
+                Dit project heeft me niet alleen veel technische skills bijgebracht, maar ook veel soft skills. Hieronder een opsomming van de belangrijkste zaken die ik heb geleerd.
+            </p>
+            <div class="col-6">
+            <h3>Technische skills</h3>
+            <ul class="list-group">
+                <li class="list-group-item">Werken met Azure Devops</li>
+                <li class="list-group-item">Werken met Bicep</li>
+                <li class="list-group-item">Werken met Azure App services</li>
+            </ul>
+            </div>
+            <div class="col-6">
+            <h3>Soft skills</h3>
+            <ul class="list-group">
+                <li class="list-group-item">Samenwerken in een team</li>
+                <li class="list-group-item">Communiceren met verschillende stakeholders</li>
+                <li class="list-group-item">Project management</li>
+            </ul>
+        </div>
+        </div>
     </div>
-    
 </body>
 </html>
