--- a/stage.html
+++ b/stage.html
@@ -51,8 +51,8 @@
                 </div>
                 <div class="col-12 mt-2">
                     <h2>Downloads</h2>
-                    <a href="assets/docs/Adoptieplan.docx" class="btn btn-outline-primary btn-rounded col-2 mt-2 shadow">Documentatie</a>
-                    <a href="assets/docs/Adoptieplan.docx" class="btn btn-outline-primary btn-rounded col-2 offset-1 shadow">Project-plan</a>
+                    <a href="assets/docs/" class="btn btn-outline-primary btn-rounded col-2 mt-2 shadow">Documentatie</a>
+                    <a href="assets/docs/ProjectPlan_MatthiasTheysArx.pptx" class="btn btn-outline-primary btn-rounded col-2 offset-1 shadow">Project-plan</a>
                     <a href="assets/docs/Adoptieplan.docx" class="btn btn-outline-primary btn-rounded col-2 offset-1 shadow">Reflectie</a>
             </div>
         </div>
