--- a/koffie.html
+++ b/koffie.html
@@ -21,10 +21,10 @@
     </header>
     <div class="container">
         <div class="row mt-3">
-            <div class="col-6">
+            <div class="col-md-6">
                     <img class="col-12 p-0 border border-primary rounded" src="assets/imgs/projectweek.jpg">
             </div>
-            <div class="col-6">
+            <div class="col-md-6">
                 <h2>Inleiding</h2>
                 <p>
                     Werken in een groep kan soms uitdagend zijn, maar het kan ook erg bevredigend zijn als alles goed samenvalt. Ik heb deelgenomen aan een project waarbij we een smart-koffietoestel ontwikkelden en ik moet zeggen dat het een van de beste ervaringen was die ik ooit heb gehad als het gaat om het werken in een groep.
