--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
     <link rel="stylesheet" href="assets/vendors/themify-icons/css/themify-icons.css">
     <!-- Bootstrap + Meyawo main styles -->
 	<link rel="stylesheet" href="assets/css/meyawo.css">
+    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+    <link rel="manifest" href="site.webmanifest">
 </head>
 <body data-spy="scroll" data-target=".navbar" data-offset="40" id="home">
 
@@ -67,7 +71,7 @@
                         Ik ben een 21 jarige student met een intresse voor Cloud en Cybersecurity. Ook ben ik iemand dat ondernemend is ingesteld. Buiten dit ben ik ook een sportieve persoon die graag met vrienden en familie samenkomt. <br><br>
                         <br>           
                     </p>
-                    <form method="get" action="assets/imgs/cv_matthiastheys_r0895598.pdf"> 
+                    <form method="get" action="assets/docs/cv_matthiastheys.pdf"> 
                         <button class="btn-rounded btn btn-outline-primary mt-4">Download CV</button>
                     </form>
                 </div>              
