--- a/koffie.html
+++ b/koffie.html
@@ -18,9 +18,13 @@
 <body class="row">
     <a href="index.html" class="home-btn">&#8962;</a>
     <header class="col-12">
-        <!-- make a home button -->
-        <div class="row">
-            <h1 class="text-center py-4 achtergrond-paars col-12">Project smart-koffietoestel</h1>
+        <div class="row achtergrond-paars text-center align-items-center">
+            <div class="col-lg-10 offset-lg-1">
+                <h1 class="text-white">Projectweek</h1>
+            </div>
+            <div class="col-lg-1 mb-3 mt-2 text-end">
+                <a class="btn btn-outline-light" href="index.html">Home</a>
+            </div>
         </div>
     </header>
     <div class="container">
@@ -48,10 +52,10 @@
                     Er zijn verschillende onderdelen die we hebben ontwikkeld voor het smart-koffietoestel. Hieronder een overzicht van de belangrijkste onderdelen, Alsook een schematische voorstelling van de werking
                 </p>
             </div>
-            <div class="col-6">
+            <div class="col-md-6 mt-5">
                 <img class="col-12" src="assets/imgs/Schema-koffie.png" alt="schema">
             </div>
-            <div class="col-6">
+            <div class="col-md-6 mt-5">
                 <h3>Technische componenten</h3>
                 <ul class="list-group">
                     <li class="list-group-item"><strong>Tablet</strong> dat gebruikt wordt als rechtstreekse touch-interface om de koffiemachine aan te sturen</li>
