--- a/nvdos.html
+++ b/nvdos.html
@@ -18,9 +18,13 @@
 <body class="row">
     <a href="index.html" class="home-btn">&#8962;</a>
     <header class="col-12">
-        <!-- make a home button -->
-        <div class="row">
-        <h1 class="text-center py-4 achtergrond-paars col-12">Nacht van de ondernemende student.</h1>
+        <div class="row achtergrond-paars text-center align-items-center">
+            <div class="col-lg-10 offset-lg-1">
+                <h1 class="text-white">Nacht van de ondernemende student.</h1>
+            </div>
+            <div class="col-lg-1 mb-3 mt-2 text-end">
+                <a class="btn btn-outline-light" href="index.html">Home</a>
+            </div>
         </div>
     </header>
     <div class="container">
