--- a/project4.html
+++ b/project4.html
@@ -16,14 +16,17 @@
     <link rel="manifest" href="site.webmanifest">
 </head>
 <body class="row">
-    <a href="index.html" class="home-btn">&#8962;</a>
     <header class="col-12">
-        <!-- make a home button -->
-        <div class="row">
-        <h1 class="text-center py-4 achtergrond-paars col-12">Project 4.0</h1>
+        <div class="row achtergrond-paars text-center align-items-center">
+            <div class="col-lg-10 offset-lg-1">
+                <h1 class="text-white">Project 4.0</h1>
+            </div>
+            <div class="col-lg-1 mb-3 mt-2 text-end">
+                <a class="btn btn-outline-light" href="index.html">Home</a>
+            </div>
         </div>
     </header>
-    <div class="container">
+    <div class="container mt-3">
         <div class="row">
         <iframe class="offset-3 w-50" style="height: 40vh;" src="https://www.youtube.com/embed/BreIcVDb844" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
