--- a/stage.html
+++ b/stage.html
@@ -10,18 +10,23 @@
     <link rel="stylesheet" href="assets/vendors/themify-icons/css/themify-icons.css">
     <!-- Bootstrap + Meyawo main styles -->
     <link rel="stylesheet" href="assets/css/meyawo.css">
-    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
-    <link rel="manifest" href="site.webmanifest">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
 </head>
 <body class="row">
     <header class="col-12">
-        <!-- make a home button -->
-        <div class="row">
-            <a href="index.html" class="home-btn">&#8962;</a>
-            <h1 class="text-center py-4 achtergrond-paars col-12">Stage bij Arxus.</h1>
+        <div class="row achtergrond-paars text-center align-items-center">
+            <div class="col-lg-10 offset-lg-1">
+                <h1 class="text-white">Stage bij Arxus.</h1>
+            </div>
+            <div class="col-lg-1 mb-3 mt-2 text-end">
+                <a class="btn btn-outline-light" href="index.html">Home</a>
+            </div>
         </div>
+    </header>
+    
         <div class="container">
             <div class="row text-center">
                 <img class="w-100 mt-2" src="assets/imgs/Adoption.png">
@@ -55,11 +60,10 @@
                 </div>
                 <div class="col-12 mt-2">
                     <h2>Downloads</h2>
-                    <a href="assets/docs/Documentatie_stage_MatthiasTheys.pdf" class="btn btn-outline-primary btn-rounded col-2 mt-2 shadow">Documentatie</a>
-                    <a href="assets/docs/ProjectPlan_MatthiasTheysArx.pptx" class="btn btn-outline-primary btn-rounded col-2 offset-1 shadow">Project-plan</a>
-                    <a href="assets/docs/reflectie_stage.pdf" class="btn btn-outline-primary btn-rounded col-2 offset-1 shadow">Reflectie</a>
+                    <a href="assets/docs/Documentatie_stage_MatthiasTheys.pdf" class="btn btn-outline-primary btn-rounded col-md-2 mt-3 shadow">Documentatie</a>
+                    <a href="assets/docs/ProjectPlan_MatthiasTheysArx.pptx" class="btn btn-outline-primary btn-rounded col-md-2 offset-md-1 mt-3 shadow">Project-plan</a>
+                    <a href="assets/docs/reflectie_stage.pdf" class="btn btn-outline-primary btn-rounded col-md-2 offset-md-1 mt-3 shadow">Reflectie</a>
             </div>
         </div>
-    </header>
 </body>
 </html>
